<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/app_name"
	 android:textSize="30sp"
	 android:gravity="center" 
	 android:layout_gravity="center_horizontal" />
	
	<TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/subtitle"
	 android:textSize="20sp"
	 android:gravity="center"
	 android:layout_gravity="center_horizontal" />
	
	<Button
	 android:id="@+id/espresso"
	 android:layout_width="200dip"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/espresso"
	 android:layout_gravity="center_horizontal" />
	
	<Button
	 android:id="@+id/coffee"
	 android:layout_width="200dip"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/coffee"
	 android:layout_gravity="center_horizontal" />
	
	<Button
	 android:id="@+id/hot"
	 android:layout_width="200dip"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/hot"
	 android:layout_gravity="center_horizontal" />
	
	<Button
	 android:id="@+id/cold"
	 android:layout_width="200dip"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/cold"
	 android:layout_gravity="center_horizontal" />
	
	<Button
	 android:id="@+id/all"
	 android:layout_width="200dip"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="10dip"
	 android:text="@string/all"
	 android:layout_gravity="center_horizontal" />

</LinearLayout>