<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
	 android:layout_width="wrap_content"
	 android:layout_height="22px"
	 android:text="@string/item_title" />
	
	<EditText
	 android:id="@+id/item_title"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:textSize="18sp" />
	
	<TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/item_ingredients" />
	
	<EditText
	 android:id="@+id/item_ingredients"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:textSize="18sp"
	 android:gravity="top"
	 android:layout_weight="0.5" />
	
	<TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/item_body" />
	
	<EditText
	 android:id="@+id/item_body"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:textSize="18sp"
	 android:gravity="top"
	 android:layout_weight="0.5" />
	
	<Button
	 android:id="@+id/submit"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/submit" />
</LinearLayout>
